--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Gabrielle Essence Eau De Parfum</title>
 </head>
+
 <body>
+  <section class="container1">
+    <img class="imgPrincipal" src="./images/image-product-desktop.jpg" alt="Perfume Gabrielle Essence Eau De Parfum">
+  </section>
 
-  Preview
+  <section class="container2"> <h1 class="titulo">Perfume</h1>
 
-  Gabrielle Essence Eau De Parfum
+  <h2 class="produto">Gabrielle Essence Eau De Parfum</h2>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+  <h1 class="descricao">Uma interpretação floral, solar e voluptuosa desenvolvida por Olivier Polge,
+  Perfumista-Criador da Casa CHANEL.</h1>
 
-  $149.99
-  $169.99
-
-  Add to Cart
+  <div class="preco">
+    <span class="desconto">R$149,99</span>
+    <span class="semDesconto">R$169,99</span>
+  </div>
   
-  <div class="attribution">
+  <button class="adicionarCarrinho"> 
+    Adicionar no carrinho
+  </button>
+  
+</section>
+  
+  <div class="atribuição">
+    Coded by <a href="https://github.com/RossanaSena/Product-preview-card-component.git">Rossana Sena</a>.
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
 </html>
