--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
 
+<!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -14,32 +15,32 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
 
+  <!-- ícone navegador -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Gabrielle Essence Eau De Parfum</title>
 </head>
 
-<body>
-  <section class="container1">
-    <img class="imgPrincipal" src="./images/image-product-desktop.jpg" alt="Perfume Gabrielle Essence Eau De Parfum">
-  </section>
+<!-- Principal -->
+<main>
+  <div class="container-1">
+    <img class="imgPrincipal" src="./images/image-product-desktop.jpg" alt="Perfume Gabrielle">
+  </div>
 
-  <section class="container2"> 
-    <h1 class="titulo">P E R F U M E</h1>
+  <!-- <section class="container-2"> 
+    <h1 class="titulo">perfume</h1>
   
     <h2 class="produto">Gabrielle Essence Eau De Parfum</h2>
 
     <h3 class="descricao">Uma interpretação floral, solar e voluptuosa desenvolvida por Olivier Polge, perfumista-criador da Casa CHANEL.</h3>
 
-  <div class="preco">
-    <span class="desconto">R$149,99</span>
-    <span class="semDesconto">R$169,99</span>
-  </div>
+    <div class="preco">
+      <span class="desconto">R$149,99</span>
+      <span class="semDesconto">R$169,99</span>
+    </div>
   
-  <button class="adicionarNoCarrinho"><img class="carrinhoDeCompras" src="./images/icon-cart.svg" alt="Carrinho de compras"><h4>Adicionar no carrinho</h4></button>
-</section>
-
-</body>
+    <button class="adicionarNoCarrinho"><img class="carrinhoDeCompras" src="./images/icon-cart.svg" alt="Carrinho de compras"><h4>Adicionar no carrinho</h4></button>
+  </section> -->
+</main>
 
 <footer>
   <p> Coded by <a href="https://github.com/RossanaSena/Product-preview-card-component.git">Rossana Sena</a>.
