--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+<>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
 
-<!-- Google fonts -->
+  <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap icons
+  <link 
+    rel="stylesheet"
+    href=> -->
 
   <!-- ícone navegador -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -22,30 +27,24 @@
 
 <!-- Principal -->
 <main>
-  <div class="container-1">
+  <section class="img">
     <img class="imgPrincipal" src="./images/image-product-desktop.jpg" alt="Perfume Gabrielle">
-  </div>
-
-  <!-- <section class="container-2"> 
-    <h1 class="titulo">perfume</h1>
-  
-    <h2 class="produto">Gabrielle Essence Eau De Parfum</h2>
-
-    <h3 class="descricao">Uma interpretação floral, solar e voluptuosa desenvolvida por Olivier Polge, perfumista-criador da Casa CHANEL.</h3>
-
-    <div class="preco">
-      <span class="desconto">R$149,99</span>
-      <span class="semDesconto">R$169,99</span>
-    </div>
-  
-    <button class="adicionarNoCarrinho"><img class="carrinhoDeCompras" src="./images/icon-cart.svg" alt="Carrinho de compras"><h4>Adicionar no carrinho</h4></button>
-  </section> -->
+  </section> 
+  <section class="retangulo">
+      <h1 class="titulo">perfume</h1>
+      <h2 class="subtitulo">Gabrielle Essence Eau De Parfum</h2>
+      <h3 class="descricao">Uma interpretação floral, solar e voluptuosa desenvolvida por Olivier Polge, perfumista-criador da Casa CHANEL.</h3>
+      <span class="precoDesconto">R$149,99</span>
+      <span class="precoSemDesconto">R$169,99</span>
+      <!-- <h4 class="btn">Adicionar ao carrinho</h4>
+        <i class="bi bi-cart3"></i> -->
+  </section>
 </main>
 
-<footer>
+<!-- <footer>
   <p> Coded by <a href="https://github.com/RossanaSena/Product-preview-card-component.git">Rossana Sena</a>.
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
   </p>
-</footer>
+</footer> -->
 
 </html>
