--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
 
-  <!-- Bootstrap icons
+  <!-- Bootstrap icons-->
   <link 
     rel="stylesheet"
-    href=> -->
-
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
+  
   <!-- ícone navegador -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Gabrielle Essence Eau De Parfum</title>
@@ -36,15 +36,10 @@
       <h3 class="descricao">Uma interpretação floral, solar e voluptuosa desenvolvida por Olivier Polge, perfumista-criador da Casa CHANEL.</h3>
       <span class="precoDesconto">R$149,99</span>
       <span class="precoSemDesconto">R$169,99</span>
-      <!-- <h4 class="btn">Adicionar ao carrinho</h4>
-        <i class="bi bi-cart3"></i> -->
+      <div id="btn">
+        <i class="bi bi-cart3"></i>
+        <h4 class="adCarrinho">Add ao carrinho</h4>
+      </div>
   </section>
 </main>
-
-<!-- <footer>
-  <p> Coded by <a href="https://github.com/RossanaSena/Product-preview-card-component.git">Rossana Sena</a>.
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  </p>
-</footer> -->
-
 </html>
