--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
@@ -36,9 +36,9 @@
       <h3 class="descricao">Uma interpretação floral, solar e voluptuosa desenvolvida por Olivier Polge, perfumista-criador da Casa CHANEL.</h3>
       <span class="precoDesconto">R$149,99</span>
       <span class="precoSemDesconto">R$169,99</span>
-      <div id="btn">
+      <div class="btn">
         <i class="bi bi-cart3"></i>
-        <h4 class="adCarrinho">Add ao carrinho</h4>
+        <h4 class="addCarrinho">Add ao Carrinho</h4>
       </div>
   </section>
 </main>
