section do container sem interferir no button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <!-- Principal -->
 <body>
-  <section class="container">
+  <section class="container"></section>
     <div class="esquerdo">
       <img class="img" src="./images/image-product-desktop.jpg" alt="Perfume Gabrielle">
       <img class="img2" src="./images/image-product-mobile.jpg" alt="Perfume Gabrielle">
@@ -47,6 +47,5 @@
         <h4 class="addCarrinho">Add ao Carrinho</h4>
       </button>
     </div>
-  </section>
 </body>
 </html>
