--- a/index.html
+++ b/index.html
@@ -12,40 +12,40 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap icons-->
-  <link 
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
-  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
+
   <!-- ícone navegador -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Gabrielle Essence Eau De Parfum</title>
 </head>
 
 <!-- Principal -->
+
 <body>
-  <section class="container"></section>
-    <div class="esquerdo">
-      <img class="img" src="./images/image-product-desktop.jpg" alt="Perfume Gabrielle">
-      <img class="img2" src="./images/image-product-mobile.jpg" alt="Perfume Gabrielle">
-    </div> 
-    <div class="direito">
-        <h1 class="titulo">perfume</h1>
-        <h2 class="subtitulo">Gabrielle Essence Eau De Parfum</h2>
-        <h3 class="descricao">Uma interpretação floral, solar e voluptuosa desenvolvida por Olivier Polge, perfumista-criador da Casa CHANEL.</h3>
-      <div class="precos">
-        <span class="precoDesconto">R$149,99</span>
-        <span class="precoSemDesconto">R$169,99</span>
-      </div>
-      <button>
-        <i class="bi bi-cart3"></i>
-        <h4 class="addCarrinho">Add ao Carrinho</h4>
-      </button>
+  <div class="esquerdo">
+    <img class="img" src="./images/image-product-desktop.jpg" alt="Perfume Gabrielle">
+    <img class="img2" src="./images/image-product-mobile.jpg" alt="Perfume Gabrielle">
+  </div>
+  <div class="direito">
+    <h1 class="titulo">perfume</h1>
+    <h2 class="subtitulo">Gabrielle Essence Eau De Parfum</h2>
+    <h3 class="descricao">Uma interpretação floral, solar e voluptuosa desenvolvida por Olivier Polge,
+      perfumista-criador da Casa CHANEL.</h3>
+    <div class="precos">
+      <span class="precoDesconto">R$149,99</span>
+      <span class="precoSemDesconto">R$169,99</span>
     </div>
+    <button>
+      <i class="bi bi-cart3"></i>
+      <h4 class="addCarrinho">Add ao Carrinho</h4>
+    </button>
+  </div>
 </body>
+
 </html>
